# JitResearch

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt
benchmarks/common/: CMakeLists.txt
benchmarks/common/include/bench/: utils.h
benchmarks/fibrec/: CMakeLists.txt  fibrec.c
benchmarks/median/: CMakeLists.txt  dataset1.h  median_main.c
benchmarks/multiply/: CMakeLists.txt  dataset1.h  multiply.c  multiply_main.c
benchmarks/nopbench/: CMakeLists.txt  nopbench.s.in
benchmarks/qsort/: CMakeLists.txt  dataset1.h  dataset2.h  qsort.c
benchmarks/rsort/: CMakeLists.txt  dataset1.h  rsort.c
benchmarks/towers/: CMakeLists.txt  towers_main.c
benchmarks/vvadd/: CMakeLists.txt  dataset1.h  vvadd_main.c
cmake/: defaults.cmake  dependencies.cmake  utils.cmake
src/: CMakeLists.txt
src/cpu_state/: CMakeLists.txt  cpu_state.cc
src/cpu_state/include/prot/: cpu_state.hh
src/elf_loader/: CMakeLists.txt  elf_loader.cc
src/elf_loader/include/prot/: elf_loader.hh
src/exec_engine/: CMakeLists.txt  exec_engine.cc
src/exec_engine/include/prot/: exec_engine.hh
src/hart/: CMakeLists.txt  hart.cc
src/hart/include/prot/: hart.hh
src/interpreter/: CMakeLists.txt  interp.cc
src/interpreter/include/prot/: interpreter.hh
src/isa/: CMakeLists.txt  isa.cc
src/isa/include/prot/: isa.hh
src/isa/tests/: CMakeLists.txt  decoder_test.cc
src/jit/: CMakeLists.txt
src/jit/asmjit/: CMakeLists.txt  asmjit.cc
src/jit/asmjit/include/prot/jit/: asmjit.hh
src/jit/base/: CMakeLists.txt  base.cc
src/jit/base/include/prot/jit/: base.hh
src/jit/factory/: CMakeLists.txt  factory.cc
src/jit/factory/include/prot/jit/: factory.hh
src/jit/ir/: CMakeLists.txt  ir.cc
src/jit/ir/include/prot/jit/: ir.hh
src/jit/lightning/: CMakeLists.txt  lightning.cc
src/jit/lightning/include/prot/jit/: lightning.hh
src/jit/llvm/: CMakeLists.txt  llvmbasedjit.cc  llvmbasedjitbuilder.cc
src/jit/llvm/builder/: CMakeLists.txt  builder.cc
src/jit/llvm/builder/include/prot/llvm/: builder.hh
src/jit/llvm/include/prot/jit/: llvmbasedjit.hh  llvmbasedjitbuilder.hh
src/jit/llvm/jit/: CMakeLists.txt  llvmbasedjit.cc
src/jit/llvm/jit/include/prot/jit/: llvmbasedjit.hh  llvmbasedjitbuilder.hh
src/jit/mir/: CMakeLists.txt  mir.cc
src/jit/mir/include/prot/jit/: mir.hh
src/jit/tpde/: CMakeLists.txt  tpde.cc
src/jit/tpde/include/prot/jit/: tpde.hh
src/jit/xbyak/: CMakeLists.txt  xbyak.cc
src/jit/xbyak/include/prot/jit/: xbyak.hh
src/memory/: CMakeLists.txt  memory.cc  plain_memory.cc  simple_page_mem.cc
src/memory/include/prot/: memory.hh  page.hh  page_memory.hh
src/memory/tests/: CMakeLists.txt  page_memory.cc
test/qsort/: qsort.c
tools/bench/: Benchmark.py  CLAUDE_Plot.md  DoBenchmark.py  Plot.py  requirements.txt
tools/sim/: CMakeLists.txt  sim_app.cpp
